--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@atlaskit/css-reset": "^3.0.4",
+    "jquery-resizable-dom": "^0.32.0",
     "react": "^16.6.3",
+    "react-beautiful-dnd": "^10.0.2",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-resizable": "^1.7.5",
+    "react-resizable-box": "^2.1.0",
+    "react-scripts": "2.1.1",
+    "styled-components": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
